<resources>
    <string name="app_name">MyContacts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="contacts">Contacts</string>
    <string name="create_contact">Create contact</string>
    <string name="create">Create</string>
    <string name="type_contact_name">Type contact name</string>
    <string name="type_phone_number">Type phone number</string>
    <string name="contact">Contact</string>
    <string name="delete">delete</string>
</resources>